force-app/main/default/objects/Budget_Reporting_Code__c/Budget_Reporting_Code__c.object-meta.xml
<CustomObject>
    <label>Budget &amp; Reporting Code</label>
    <nameField>
        <label>Budget &amp; Reporting Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget &amp; Reporting Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>