force-app/main/default/objects/Budget_Reporting_Code__c/fields/Number_of_B_R_Entries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_B_R_Entries__c</fullName>
    <label>Number of B &amp; R Entries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>