force-app/main/default/objects/Budget_Reporting_Code__c/fields/Number_Of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Opportunities__c</fullName>
    <label>Number Of Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>