force-app/main/default/objects/Budget_Reporting_Code__c/fields/Number_of_PNNL_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PNNL_Contracts__c</fullName>
    <label>Number of PNNL Contracts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>