force-app/main/default/objects/Budget_Reporting_Code__c/fields/PNNL_Active__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>