force-app/main/default/objects/Budget_Reporting_Code__c/fields/PNNL_B_R_Code__c.field-meta.xml
<CustomField>
    <fullName>PNNL_B_R_Code__c</fullName>
    <externalId>true</externalId>
    <label>B&amp;R Code</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>