force-app/main/default/objects/Budget_Reporting_Code__c/fields/PNNL_B_R_Control_Level__c.field-meta.xml
<CustomField>
    <fullName>PNNL_B_R_Control_Level__c</fullName>
    <label>B&amp;R Control Level</label>
    <length>9</length>
    <type>Text</type>
</CustomField>