force-app/main/default/objects/Budget_Reporting_Code__c/fields/PNNL_Budget_Reporting_Number_External__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Budget_Reporting_Number_External__c</fullName>
    <externalId>true</externalId>
    <label>Budget &amp; Reporting Number(External)</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>