force-app/main/default/objects/Budget_Reporting_Code__c/fields/PNNL_Report_Level__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Report_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report Level</label>
    <type>Checkbox</type>
</CustomField>