force-app/main/default/objects/Budget_Reporting_Code__c/fields/PNNL_Title__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Title__c</fullName>
    <label>Title</label>
    <length>60</length>
    <type>Text</type>
</CustomField>