force-app/main/default/objects/Budget_Reporting_Code__c/validationRules/B_R_Number_Character_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>B_R_Number_Character_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Name )   &gt;=  10</errorConditionFormula>
    <errorMessage>Budget and Reporting Number Exceeds 9 Characters</errorMessage>
</ValidationRule>